# JavaCompiler

./: .gitmodules  CMakeLists.txt
examples/: Student.java
include/Frontend/: CompilerInstance.h  CompilerOptions.h  Diagnostics.h  FrontendAction.h  SourceLocation.h  SourceManager.h
include/Infrastructure/: ArrayView.h  Stream.h
include/Lex/: Lexer.h  SourceLocationBuilder.h  Token.h
src/: CMakeLists.txt
src/Driver/: CMakeLists.txt  Driver.cpp
src/Frontend/: BuiltinFrontendActions.h  CMakeLists.txt  Diagnostics.cpp  FrontendAction.cpp  LexOnlyFrontendAction.cpp  SourceFileInfo.cpp  SourceFileLineBuffer.cpp  SourceFileLineBuffer.h  SourceLocation.cpp  SourceManager.cpp
src/Infrastructure/: CMakeLists.txt  Stream.cpp  StreamReader.cpp  StreamWriter.cpp
src/Lex/: CMakeLists.txt  Lexer.cpp  LexerStreamReader.cpp  LexerStreamReader.h  TokenDump.cpp
tests/: CMakeLists.txt  main.cpp
tests/Frontend/: SourceFileInfoTests.cpp
tests/Infrastructure/: StreamTests.cpp
tests/Lex/: LexerTests.cpp
